2004-06-08  John Luke  <jluke@cfl.rr.com>

	* JavaBindingCompilerService.cs: rework so Process.Start works
	* JavaBindingExecutionService.cs: rework so Process.Start works
	by using ProcessStartInfo (cmd, args)

2004-05-25  Todd Berman  <tberman@sevenl.net>

	* JavaLanguageBinding.cs: signature change for GenerateMakefile.

2004-04-28  Todd Berman  <tberman@sevenl.net>

	* JavaLanguageBinding.cs: stubbing GenerateMakefile.

2004-04-16  John Luke  <jluke@cfl.rr.com>

	* JavaBindingCompilerService.cs:
	rework error parsing to work off of Streams instead of temp files
	allows javac errors to work, gcj maybe not	
	set the column of the error
	specify the output directory
	* Project/JavaCompilerOptions: add runtime prop
	* JavaBindingExecutionService.cs:  add prelim support
	for choosing runtime
	* JavaCompiler.cs:
	* JavaRuntime.cs: add enums for compiler and runtime

2004-04-09  John Luke  <jluke@cfl.rr.com>

	* JavaBindingCompilerService.cs: account for classpath when compiling,
	work with gcj or javac, cleanup old code
	* Gui/ProjectConfigurationPropertyPanel.cs: rough port, needs major HIG love,
	cleanup, add RadioButtons to select from gcj and javac
	* JavaBindingExecutionService.cs: use ikvm instead of java runtime
	* Parser/*: make a copy of the CSharpBinding/Parser in case I am crazy enough
	to port the parser to work with Java (not built yet)
	* Project/JavaCompilerParameters.cs: add javac/gcj .Compiler property,
	fix CompilerPath from being hardcoded

2004-03-25  John Luke  <jluke@cfl.rr.com>
	
	import from SD and make it build with our
	namespaces and SourceEditor
	change to work like CSharpBinding 