@@ -7,6 +7,7 @@ namespace JavaBinding
 		Ikvm, // JIT to CIL and then exec with mono
 		Mono, // compile with ikvmc and then run with mono
 		Java, // an installed JRE
+		Gij, // gcj interpreter
 	}
 }
 
